# mlops_grp33

./: .gitignore  .pre-commit-config.yaml  CHECKLIST.md  LICENSE  Makefile  README.md  cloudbuild_api.yaml  cloudbuild_predict.yaml  cloudbuild_train.yaml  data.dvc  docker-compose.yaml  pyproject.toml  report.html  requirements.txt  requirements_container.txt  requirements_dev.txt
.dvc/: config
.github/: CHECKLIST.md
.github/workflows/: tests.yml
MLops_project/: __init__.py  config.yaml  predict_model.py  train_model.py
MLops_project/api/: fast_api_predict.py  index.html
MLops_project/data/: dataload.py  label_mapping_gen.py  make_dataset.py  process_data.py
MLops_project/models/: model.py
data/: label_mapping.json  processed.dvc
dockerfiles/: predict_model.dockerfile  serve_api_predict.dockerfile  train_model.dockerfile  train_model_torch.dockerfile
dockerfiles_local/: predict_model.dockerfile  serve_api_predict.dockerfile  train_model_torch.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
model_perfomance/: data_drift.py  drift_metrics.csv
performance/: data_drift.py
personal/: .gitignore
reports/: README.md  report.html
tests/: data_check.py  data_drift.py  test_data.py  test_model.py
workflows/: data_drift.py  profiling.py
workflows/test_images/: 1905_sn_web_2400x1600.jpg:Zone.Identifier  20230713-SEA-StrawberryShortcaker-DebbieWee-hero-027-70e05a1299cd41d8b4b7768cd67a8d97.jpg:Zone.Identifier  6563813cbdabeafc1698f04a_tiramisu-cake-with-mint-copy-space-2021-08-30-13-14-30-utc (1).jpg:Zone.Identifier  Lasagna.png:Zone.Identifier  (+26 more)
