[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "MLops_project"
version = "0.0.1"
description = "MLops project"
authors = [
  { name = "Group 33", email = "your@email.com" },
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10.12"
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
packages = ["MLops_project"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = ['requirements_dev.txt']}

[tool.ruff]
line-length = 120
exclude = ["__init__.py",]
[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    'ignore::DeprecationWarning',
]
